crates/cli/tests/snapshots/init__init_interactive_renders_the_decorated_flow_on_a_terminal.snap
---
source: crates/cli/tests/init.rs
expression: session
---
Session {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "[pv] init\n\n┌  PV init  ·  acme\n│\n◇  Detected Laravel · Vite\n│  Laravel: Detected composer.json, artisan, and Laravel project files\n│  Vite: Detected Vite in package.json\n│\n◇  Selected Project resources:\n│  mailpit: Detected SMTP mail env keys when selected\n│  mysql: Detected DB_CONNECTION=mysql\n│  redis: Detected Redis-compatible env keys when selected\n│  rustfs: Detected AWS/S3 env keys when selected\n│\n◇  Suggested resources\n│  [x] MySQL\n│  [ ] Postgres\n│  [x] Redis\n│  [x] Mailpit\n│  [x] RustFS/S3\n│\n◇  Project config preview:\n│  php: '8.4'\n│  document_root: public\n│  env:\n│    APP_URL: ${project_url}\n│    VITE_DEV_SERVER_CERT: ${tls_cert}\n│    VITE_DEV_SERVER_KEY: ${tls_key}\n│  mailpit:\n│    version: latest\n│    env:\n│      MAIL_HOST: ${smtp_host}\n│      MAIL_MAILER: smtp\n│      MAIL_PORT: ${smtp_port}\n│  mysql:\n│    version: latest\n│    allocations:\n│      app:\n│        env:\n│          DB_CONNECTION: mysql\n│          DB_DATABASE: ${database}\n│          DB_HOST: ${host}\n│          DB_PASSWORD: ${password}\n│          DB_PORT: ${port}\n│          DB_USERNAME: ${username}\n│  redis:\n│    version: latest\n│    allocations:\n│      cache:\n│        env:\n│          REDIS_HOST: ${host}\n│          REDIS_PORT: ${port}\n│          REDIS_PREFIX: ${prefix}\n│  rustfs:\n│    version: latest\n│    allocations:\n│      uploads:\n│        env:\n│          AWS_ACCESS_KEY_ID: ${access_key}\n│          AWS_BUCKET: ${bucket}\n│          AWS_ENDPOINT: ${endpoint}\n│          AWS_SECRET_ACCESS_KEY: ${secret_key}\n│\n└  Wrote pv.yml\n   <tempdir>/acme/pv.yml\n   ↳ Link this Project:  pv link\n⚠  Vite HTTPS: configure the app's Vite config to read VITE_DEV_SERVER_CERT and\n   VITE_DEV_SERVER_KEY.\n",
    stderr: "",
    prompts: [
        "Use these selections? -> Selected(0)",
        "Write Project config? -> Confirmed(true)",
    ],
}
