crates/cli/tests/snapshots/init__init_without_a_terminal_refuses_with_rerun_flags.snap
---
source: crates/cli/tests/init.rs
expression: session
---
Session {
    exit_code: ExitCode(
        unix_exit_status(
            1,
        ),
    ),
    stdout: "",
    stderr: "error: pv init requires an interactive terminal; rerun with --yes or --print.\n",
    prompts: [],
}
