crates/cli/tests/snapshots/init__init_yes_writes_detected_defaults_without_prompting.snap
---
source: crates/cli/tests/init.rs
expression: session
---
Session {
    exit_code: ExitCode(
        unix_exit_status(
            0,
        ),
    ),
    stdout: "PV init\nDetected Project signals:\n  Laravel: Detected composer.json, artisan, and Laravel project files\n  Vite: Detected Vite in package.json\nSelected Project resources:\n  mailpit: Detected SMTP mail env keys when selected\n  mysql: Detected DB_CONNECTION=mysql\n  redis: Detected Redis-compatible env keys when selected\n  rustfs: Detected AWS/S3 env keys when selected\nVite HTTPS: configure the app's Vite config to read VITE_DEV_SERVER_CERT and VITE_DEV_SERVER_KEY.\nWrote Project config: <tempdir>/acme/pv.yml\n",
    stderr: "",
    prompts: [],
}
